# dorm_accounting_app

./: .gitignore  README.md  __init__.py  app_windows.py  custom_messages.py  database.py  pyproject.toml  ruff.toml  style.css
dorm_accounting/: __init__.py  app_windows.py  custom_inputs.py  database.py  model.py  style.css
dorm_accounting/help/: help_occupants.html
help/: help_room_occupants.html  help_rooms.html
